delete team page, adopt common html and js

--- a/common/header.html
+++ b/common/header.html
@@ -13,29 +13,18 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav  ">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <li id="menu-index"  class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html"> About</a>
+            <li id="menu-about" class="nav-item">
+              <a  class="nav-link" href="about.html"> About</a>
             </li>
-            <li class="nav-item">
+            <li id="menu-service" class="nav-item">
               <a class="nav-link" href="service.html">Services</a>
             </li>
-            <li class="nav-item">
+            <li id="menu-why" class="nav-item">
               <a class="nav-link" href="why.html">Why Us</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="team.html">Team</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#"> <i class="fa fa-user" aria-hidden="true"></i> Login</a>
-            </li>
-            <form class="form-inline">
-              <button class="btn  my-2 my-sm-0 nav_search-btn" type="submit">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </button>
-            </form>
           </ul>
         </div>
       </nav>
