updated wording for footer

--- a/common/footer.html
+++ b/common/footer.html
@@ -1,7 +1,7 @@
 <section class="info_section layout_padding2">
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-lg-3 info_col">
+        <div class="col-md-6 col-lg-4 info_col">
           <div class="info_contact">
             <h4>
               Address
@@ -10,45 +10,35 @@
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
                 <span>
-                  Location
+                  46 Vroom St, Jersey City, NJ
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
                 <span>
-                  Call +01 1234567890
+                  Call (347) 687-4520
                 </span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
                 <span>
-                  demo@gmail.com
+                  info@pjtechsolutions.com
                 </span>
               </a>
             </div>
           </div>
-          <div class="info_social">
-            <a href="">
-              <i class="fa fa-facebook" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-twitter" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-linkedin" aria-hidden="true"></i>
-            </a>
-            <a href="">
-              <i class="fa fa-instagram" aria-hidden="true"></i>
-            </a>
-          </div>
         </div>
-        <div class="col-md-6 col-lg-3 info_col">
+        <div class="col-md-6 col-lg-4 info_col">
           <div class="info_detail">
             <h4>
               Info
             </h4>
             <p>
-              necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
+              PJ TECH SOLUTIONS LLC is a cutting-edge
+Information Technology (IT) services firm
+specializing in delivering innovative and customized
+IT solutions to meet the diverse needs of
+businesses and government agencies. 
             </p>
           </div>
         </div>
@@ -70,22 +60,8 @@
               <a class="" href="why.html">
                 Why Us
               </a>
-              <a class="" href="team.html">
-                Team
-              </a>
             </div>
           </div>
-        </div>
-        <div class="col-md-6 col-lg-3 info_col ">
-          <h4>
-            Subscribe
-          </h4>
-          <form action="#">
-            <input type="text" placeholder="Enter email" />
-            <button type="submit">
-              Subscribe
-            </button>
-          </form>
         </div>
       </div>
     </div>
@@ -98,7 +74,7 @@
     <div class="container">
       <p>
         &copy; <span id="displayYear"></span> All Rights Reserved By
-        <a href="https://html.design/">Free Html Templates</a>
+        <a href="https://html.design/">PJ Tech Solutions LLC</a>
       </p>
     </div>
   </section>
