added capability statment

--- a/common/footer.html
+++ b/common/footer.html
@@ -25,6 +25,12 @@
                   info@pjtechsolutions.com
                 </span>
               </a>
+              <a  href="/resources/Capability Statement.pdf">
+                <i class="fa fa-file" aria-hidden="true"></i>
+                <span>
+                  Capability Statement
+                </span>
+              </a>
             </div>
           </div>
         </div>
